Fixing tooltips and layout issues in IE (SED-52,SED-57,SED-70)

--- a/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
+++ b/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
@@ -430,7 +430,7 @@ table.executionTableResult td {
 
 .rowResizable {
     min-height: 200px;
-    flex: 1;
+   /* flex: 1; cause issue in IE*/
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
